--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "d3": "^7.8.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -20,6 +21,7 @@
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
