--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "color": "^4.2.3",
     "d3": "^7.8.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
