More work on production for backend, fixed eslintrc.json

--- a/nextjs-frontend/.eslintrc.json
+++ b/nextjs-frontend/.eslintrc.json
@@ -3,6 +3,6 @@
     "next/core-web-vitals",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "plugin:import/typescript",
+    "plugin:import/typescript"
   ]
 }
