--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -34,6 +34,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0"
