--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/color": "^3.0.3",
+    "@types/leaflet": "^1.9.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0"
