--- a/nextjs-frontend/.env.template
+++ b/nextjs-frontend/.env.template
@@ -1,2 +1,1 @@
-SPOTIFY_CLIENT_ID="https://developer.spotify.com/dashboard/"
-SPOTIFY_CLIENT_SECRET="https://developer.spotify.com/dashboard/"
+NEXT_PUBLIC_BACKEND_URI="http://localhost:9000"
