--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
+    "recharts": "^2.5.0",
     "swr": "^2.1.2",
     "typescript": "5.0.2"
   },
