More work on production

--- a/play-scala-seed/conf/application.template.conf
+++ b/play-scala-seed/conf/application.template.conf
@@ -3,11 +3,12 @@ slick.dbs.default {
   profile = "slick.jdbc.PostgresProfile$"
   db {
     driver = "org.postgresql.Driver"
-    url="jdbc:postgresql://77.129.59.15:5432/postgres"
-    user=postgres
-    password=0SBvjUB5sjMvQpP6r_B
+    url="jdbc:postgresql://IP:PORT/postgres"
+    user=USER
+    password=PASSWORD
     numThreads=1
     maxConnections=1
   }
 }
+
 play.filters.enabled += "play.filters.cors.CORSFilter"
