--- a/play-scala-seed/conf/production.template.conf
+++ b/play-scala-seed/conf/production.template.conf
@@ -1,5 +1,17 @@
 # https://www.playframework.com/documentation/latest/Configurationplatform {
-include "application.conf"
+# RENAME THIS FILE TO application.conf
+
+slick.dbs.default {
+  profile = "slick.jdbc.PostgresProfile$"
+  db {
+    driver = "org.postgresql.Driver"
+    url="jdbc:postgresql://IP_ADDRESS:PORT/postgres"
+    user=USER
+    password=PASSWORD
+    numThreads=1
+    maxConnections=1
+  }
+}
 
 application.mode=prod
 
